<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blank"
                android:text="Menu" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="#00ffff"
            />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

         
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/b1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blank"
                    android:text="@string/a1" />

            </LinearLayout>

            <TextView
               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                   
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                
                 <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2" 
                android:background="@drawable/blank"/>
 </LinearLayout>
           

            <TextView
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                   
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                
                <Button
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a3" 
                android:background="@drawable/blank"/>
 </LinearLayout>
            

            <TextView
               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                
                 <Button
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a4" 
                android:background="@drawable/blank"/>
 </LinearLayout>
           

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                
                 <Button
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a5" 
                android:background="@drawable/blank"/>
 </LinearLayout>
           

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                   
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                
                <Button
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a6" 
                android:background="@drawable/blank"/>
 </LinearLayout>
            

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                   
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                
                 <Button
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a7" 
                android:background="@drawable/blank"/>
 </LinearLayout>
           

            <TextView
               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                
                <Button
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a8" 
                android:background="@drawable/blank"/>
 </LinearLayout>
            

            <TextView
               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                   
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                
                <Button
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a9" 
                android:background="@drawable/blank"/>
 </LinearLayout>
            

            <TextView
               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                  
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                <Button
                android:id="@+id/b10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a10" 
                android:background="@drawable/blank"/>
 </LinearLayout>
            

            <TextView
              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                  
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                <Button
                android:id="@+id/b11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a11" 
                android:background="@drawable/blank"/>
                
 </LinearLayout>
            

            <TextView
          
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12."
                    android:textColor="#39FF14"
                    android:textSize="40dp"
                    android:textStyle="bold" />
                <Button
                android:id="@+id/b12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a12" 
                android:background="@drawable/blank"/>
 </LinearLayout>
            
        </LinearLayout>


    </ScrollView>

</LinearLayout>
